# pagex

./: .gitignore  LICENSE  MANIFEST.in  README.md  example.html  pagex.example.toml  pagex.py  pyproject.toml  test_pagex.py
.github/workflows/: test.yml
docs/: cloudflare.md
skills/pagex/: SKILL.md
skills/pagex/assets/: cormorant-garamond-latin.woff2.b64  fonts.json  newsreader-italic-latin.woff2.b64  newsreader-latin.woff2.b64
skills/pagex/scripts/: design_css.py
skills/pagex/templates/: document.html
